# Diffsynth_Wan2.2_plus

./: .gitignore  Pointset.md  diff-environment.yml
VLA/interface/: test.py  websocket_policy_server.py
atm/: atm_inference.py
atm/dataloader/: __init__.py  base_dataset.py  robocoin_action_dataloader.py  robomimic_compat.py  utils.py
atm/model/: __init__.py  track_transformer.py  track_transformer_action.py
atm/policy/: __init__.py
atm/utils/: flow_utils.py
diffsynth/configs/: model_configs.py
diffsynth/core/: __init__.py
diffsynth/core/metric/: evaluate_ezsbench.py  metric.py  pyproject.toml
diffsynth/core/metric/pbench/: __init__.py  aesthetic_quality.py  background_consistency.py  distributed.py  i2v_background.py  i2v_subject.py  overall_consistency.py  subject_consistency.py  utils.py  utils_i2v.py  vqa_evaluation.py
diffsynth/diffusion/: base_pipeline.py  logger.py  loss.py  parsers.py  runner.py  training_module.py
diffsynth/models/: model_loader.py  wan_video_action_encoder.py  wan_video_dit.py  wan_video_mot.py  wan_video_track_context.py  wan_video_vace.py
diffsynth/pipelines/: wan_video copy.py  (+3 more)
tool/: README.md  add_prompt_emb_to_episode.py  build_0325_wan_from_0325_total.py  build_piper_train_1_from_episodes.py  build_prompt_embeddings.py  decode_compare_cobot_wan_latents.py  extract_cobot_wan_vae_latents.py  filter_across_chunk_clips.py  filter_selected_episodes_from_csv.py  qwen35_filter_vla_data.py  sample_points.py  sync_piper_splits_from_master.py  update_track_and_len.py  visualize_track_map_debug.py  visualize_track_to_mp4.py
(+18 files in other folders)
